add_subdirectory(io)
add_subdirectory(os)
add_subdirectory(format)
add_subdirectory(array)
add_subdirectory(cqueue)
add_subdirectory(cstring)
add_subdirectory(iic)
add_subdirectory(oled)
add_subdirectory(spi)
add_subdirectory(exti)
add_subdirectory(lora)
add_subdirectory(timer)
add_subdirectory(pwm)
add_subdirectory(adc)
add_subdirectory(joystick)
add_subdirectory(motor)
add_subdirectory(imu)
add_subdirectory(vector)
add_subdirectory(matrix)
add_subdirectory(pid)
add_subdirectory(gearMotor)